--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@ a {
 /* Header and Navbar */
 .svg-logo {
     padding-top: .65em;
+    cursor: none;
 }
+
 header {
     margin-top: 2em;
     /* padding: .5em; */
@@ -88,6 +90,10 @@ nav a:focus {
     float: right;
     width: 55%;
     /* border: 2px solid red; */
+}
+
+tspan {
+    cursor: none;
 }
 
 .container-deets {
