--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
 }
 
 body {
-    /* height: 300vh; */
     margin: 0 auto;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -37,7 +36,6 @@ header {
 }
 
 .container-nav {
-    /* margin-top: .5em; */
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
@@ -51,7 +49,6 @@ header img {
 nav ul {
     list-style-type: none;
     display: flex;
-    /* border: 2px solid red; */
 }
 
 nav li {
@@ -62,13 +59,13 @@ nav li {
 nav a {
     color: inherit;
     color: #707070;
-    /* padding: 0.2rem 1rem; */
     cursor: default;
 }
 
 nav a:hover,
 nav a:focus {
     color: #FB4C85;
+    font-weight: 900;
 }
 
 .current-page {
@@ -78,7 +75,7 @@ nav a:focus {
 }
 
 .current-page:hover {
-    border-bottom: none;
+    color: #8751F1;
 }
 
 
