--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul, a {
 .grid-aside {
     position: fixed;
     z-index: 1;
-    bottom: 35%;
+    top: 35.5%;
     left: 48px;
     overflow-x: hidden;
     font-size: 1.5em;
@@ -75,13 +75,17 @@ ul, a {
     padding-bottom: .5em;
 }
 
+.grid-aside i:hover {
+    font-size: 1.25em;
+}
+
 .grid-main {
-    /* border: 2px solid green; */
     display: flex;
     align-items: flex-start;
     justify-content: center;
     grid-column: 1 / 3;
     grid-row: 2 / 3;
+    margin-top: 1.25em;
 }
 
 #ikiliagwu-eloke {
