--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
 
 body {
     margin: 0 auto;
-    width: 90%;
-    height: 200vh;
 }
 
 ul, a {
@@ -16,83 +14,77 @@ ul, a {
     list-style-type: none;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 1em;
-    margin: 0 4em;
-    height: 100vh;
-}
-
 .grid-header {
+    /* border: 2px solid green; */
     display: flex;
     justify-content: space-between;
     margin-top: 1.5em;
-    padding: 1em;
-    grid-column: 1 / -1;
 }
 
 #header-logo {
-    padding-left: .75em;
+    padding-top: 12px;
+    margin-left: .75em;
 }
 
 .header-nav {
     display: flex;
+    padding: 0;
 }
 
 .header-nav a {
     font-size: .75em;
-    margin: 1.5em;
     font-weight: 300;
     cursor: default;
+    margin: 1.75em;
 }
+
 .header-nav a:hover {
     text-transform: uppercase;
+    border-bottom: 1px solid black;
 }
 
 #current-page {
     text-transform: uppercase;
-    font-size: .85em;
-    font-weight: 700;
-    border-bottom: 2px solid black
+    border-bottom: 1px solid black;
 }
 
-.grid-aside {
-    position: fixed;
-    z-index: 1;
-    top: 35.5%;
-    left: 48px;
-    overflow-x: hidden;
-    font-size: 1.5em;
-}
+/* Header media queries */
+@media (max-width: 975px) {
+    .grid-header {
+        flex-direction: column;
+        align-items: center;
+    }
 
-.grid-aside ul {
-    padding: 0;
-    margin: 0;
-}
+    #header-logo {
+        margin: 0 .75rem .75rem;
+    }
 
-.grid-aside i {
-    padding-bottom: .5em;
-}
-
-.grid-aside i:hover {
-    font-size: 1.25em;
+    .header-nav {
+        /* border: 2px solid green; */
+        margin: 0 .75rem;
+    }
 }
 
 .grid-main {
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-    margin-top: 1.25em;
+    justify-content: space-between;
+    cursor: none;
+    margin: 4em 5%;
+}
+
+.main-text {
+    margin-top: 3.5em;
+}
+
+.svg-graphic {
 }
 
 #ikiliagwu-eloke {
-    font-weight: 100;
-    font-size: 3.5em;
-    margin-bottom: 0;
+    font-weight: 300;
+    font-size: 5rem;
+    margin: 0;
 }
+
 
 #front-end {
     margin: 0;
@@ -102,16 +94,8 @@ ul, a {
     margin: 0;
 }
 
-.grid-section {
-    grid-column: 3 / 4;
-    grid-row-gap: 2 / 3;
-}
-
 .grid-footer {
-    grid-column: 1 / -1;
     font-size: .75em;
-    display: flex;
-    justify-content: center;
 }
 
 .fa-arrow-circle-up {
