--- a/style.css
+++ b/style.css
@@ -3,103 +3,135 @@
     font-family: 'Nunito', sans-serif;
     font-weight: normal;
     color: inherit;
-}
-
-body {
-    margin: 0 auto;
-}
-
-ul, a {
     text-decoration: none;
     list-style-type: none;
 }
 
-.grid-header {
-    /* border: 2px solid green; */
+body {
+    margin: 0 auto;
+    overflow-x: hidden;
+    height: 200vh;
+}
+
+#grid-header {
+    background-color: white;
     display: flex;
     justify-content: space-between;
-    margin-top: 1.5em;
+    padding: .75em;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 1s;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 #header-logo {
     padding-top: 12px;
-    margin-left: .75em;
+    margin-left: 1.75em;
 }
 
 .header-nav {
+    /* color: #631BF1; */
+    margin-right: 1.75em;
+    padding: 1em 0;
     display: flex;
     padding: 0;
 }
 
 .header-nav a {
-    font-size: .75em;
-    font-weight: 300;
+    font-size: .5rem;
+    font-weight: 500;
     cursor: default;
     margin: 1.75em;
+    text-transform: uppercase;
 }
 
 .header-nav a:hover {
-    text-transform: uppercase;
-    border-bottom: 1px solid black;
+    font-weight: 900;
 }
 
 #current-page {
-    text-transform: uppercase;
-    border-bottom: 1px solid black;
+    font-weight: 900;
+    padding-left: 5px;
+    border-left: 5px solid;
 }
 
 /* Header media queries */
 @media (max-width: 975px) {
-    .grid-header {
+    #grid-header {
         flex-direction: column;
         align-items: center;
+        padding-bottom: 1em;
     }
 
     #header-logo {
-        margin: 0 .75rem .75rem;
+        margin-right: 1.95em;
     }
 
     .header-nav {
-        /* border: 2px solid green; */
-        margin: 0 .75rem;
+        margin: 0 .75em;
     }
 }
 
 .grid-main {
-    display: flex;
-    justify-content: space-between;
-    cursor: none;
-    margin: 4em 5%;
+    margin-top: 12em;
 }
 
 .main-text {
-    margin-top: 3.5em;
-}
-
-.svg-graphic {
+    margin-right: 4%;
+    text-align: right;
 }
 
 #ikiliagwu-eloke {
-    font-weight: 300;
     font-size: 5rem;
     margin: 0;
+    font-weight: 100;
 }
 
+@media (max-width: 975px) {
+    .grid-main {
+        margin: 12em 2em;
+    }
 
-#front-end {
-    margin: 0;
+    .main-text {
+        text-align: center;
+    }
 }
 
-#ui-ux {
-    margin: 0;
-}
-
-.grid-footer {
-    font-size: .75em;
-}
-
-.fa-arrow-circle-up {
+.icon-links {
+    /* border: 2px solid black; */
+    font-size: 1.25rem;
     position: fixed;
-    bottom: 5%;
-    right: 5%;
+    bottom: 5.5%;
+    left: 3.5%;
+    /* border: 2px solid green; */
+}
+
+.icon-links li {
+    margin-bottom: .75em;
+}
+
+.icon-links a {
+    /* font-weight: 100; */
+}
+
+.icon-links a:hover {
+    cursor: default;
+    border-bottom: 5px solid black;
+    font-size: 1.45rem;
+}
+
+.pattern-1 {
+    position: absolute;
+    top: -12%;
+    right: -5%;
+    z-index: -1;
+}
+
+.pattern-2 {
+    position: absolute;
+}
+
+.pattern-3 {
+    position: absolute;
 }
