--- a/style.css
+++ b/style.css
@@ -1,28 +1,51 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
-    font-weight: normal;
-    color: inherit;
-    text-decoration: none;
-    list-style-type: none;
+  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
+  font-weight: normal;
+  color: inherit;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 body {
-    margin: 0 auto;
-    overflow-x: hidden;
-    height: 200vh;
+  margin: 0 auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+#top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  cursor: none;
+  color: black;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 400px;
+}
+
+#top-button:hover {
+  background-color: #707070;
+}
+
+#home, #about, #blog, #projects {
+  min-height: 100vh;
 }
 
 #grid-header {
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: .75em;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    transition: top 1s;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: .75em;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: top 1s;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 #header-logo {
@@ -31,7 +54,6 @@ body {
 }
 
 .header-nav {
-    /* color: #631BF1; */
     margin-right: 1.75em;
     padding: 1em 0;
     display: flex;
@@ -99,16 +121,14 @@ body {
 }
 
 .icon-links {
-    /* border: 2px solid black; */
     font-size: 1.25rem;
     position: fixed;
-    bottom: 5.5%;
-    left: 3.5%;
-    /* border: 2px solid green; */
+    bottom: 1.5%;
+    left: 1.5%;
 }
 
 .icon-links li {
-    margin-bottom: .75em;
+    margin-bottom: .5em;
 }
 
 .icon-links a {
@@ -117,7 +137,6 @@ body {
 
 .icon-links a:hover {
     cursor: default;
-    border-bottom: 5px solid black;
     font-size: 1.45rem;
 }
 
