--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   scroll-behavior: smooth;
 }
 
+/* Back to top */
 #top-button {
   position: fixed;
   bottom: 20px;
@@ -33,6 +34,7 @@ body {
 }
 
 #home, #about, #blog, #projects {
+    /* border: 2px solid green; */
   min-height: 100vh;
 }
 
@@ -46,6 +48,7 @@ body {
   width: 100%;
   transition: top 1s;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  border-radius: 0 0 20px 20px;
 }
 
 #header-logo {
@@ -110,6 +113,11 @@ body {
     font-weight: 100;
 }
 
+@media (max-width: 660px) {
+    #ikiliagwu-eloke {
+        font-size: 3rem;
+    }
+}
 @media (max-width: 975px) {
     .grid-main {
         margin: 0 2em;
